# mcp-experiment

./: README.md  pyproject.toml
src/mcp_experiment/: host.py  server.py
