[project]
name = "mcp-experiment"
version = "0.1.0"
description = ""
authors = [
    {name = "Robert Nasuti",email = "rlnasuti@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "mcp_experiment", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
