[project]
name = "mcp-experiment"
version = "0.1.0"
description = ""
authors = [
    {name = "Robert Nasuti",email = "rlnasuti@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "fastapi",
    "uvicorn",
    "chainlit (>=2.5.5,<3.0.0)",
    "mcp (>=1.9.2,<2.0.0)",
]

[tool.poetry]
packages = [{include = "mcp_experiment", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
